01_ns.yml
kind: Namespace
apiVersion: v1
metadata:
  name: nextcloud
  labels:
     app: nextcloud
