06_nextcloud-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-server
  labels:
    app: nextcloud
  namespace: nextcloud
spec:
  replicas: 1
  selector:
    matchLabels:
      pod-label: nextcloud-server-pod
  template:
    metadata:
      labels:
        pod-label: nextcloud-server-pod
    spec:
      containers:
      - name: nextcloud
        image: nextcloud:production-apache
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        volumeMounts:
          - name: server-storage
            mountPath: /var/www/html
            subPath: server-data
      volumes:
        - name: server-storage
          persistentVolumeClaim:
            claimName: nextcloud-pvc
#        ports:
#        - containerPort: <Port>
