05_nextcloud-db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-db
  namespace: nextcloud
  labels:
    app: nextcloud
spec:
  selector:
    app: nextcloud-db-pod
  ports:
  - port: 3306
    protocol: TCP
