07_nextcloud-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-server
  labels:
    app: nextcloud
  namespace: nextcloud
spec:
  type: NodePort
  selector:
    pod-label: nextcloud-server-pod
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
