08_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud-ingress
  namespace: nextcloud
  labels:
    app.kubernetes.io/name: nextcloud
    helm.sh/chart: nextcloud-3.1.2
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: app
spec:
  ingressClassName: nginx
  rules:
#  - host: ckode.westeurope.cloudapp.azure.com
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud-server
            port:
              number: 80
